# algoro-pi

./: LICENSE  README.md
.claude/: settings.local.json
docs/superpowers/plans/: 2026-05-11-dns-engine-admin-ui.md  2026-05-11-setup-route.md
docs/superpowers/specs/: 2026-05-11-setup-route-design.md  2026-05-11-slopstop-v1-design.md
firmware/: .gitignore  conftest.py  pyproject.toml
firmware/blocklists/: hard_mode.txt  social_news.txt  social_only.txt
firmware/dns/: unbound.conf.j2
firmware/src/algoro/: blocklist.py  db.py  dns_control.py
firmware/src/algoro/admin/: app.py  deps.py
firmware/src/algoro/admin/routes/: auth_routes.py  blocklist_routes.py  setup_routes.py
firmware/src/slopstop/: auth.py  blocklist.py  db.py  dns_control.py
firmware/src/slopstop/admin/: app.py  deps.py
firmware/src/slopstop/admin/routes/: auth_routes.py  blocklist_routes.py
firmware/static/: style.css
firmware/systemd/: algoro-admin.service  install.sh  slopstop-admin.service
firmware/templates/: base.html  dashboard.html  login.html  setup.html
firmware/tests/: test_admin.py  test_auth.py  test_blocklist.py  test_db.py  test_dns_control.py  test_integration.py  test_setup.py
