[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slopstop"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "anyio>=4.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires running Unbound on a Pi or in Docker",
]
